--- a/Pacote_Download/Projeto_Seminário/Cadastro_secretaria/cad_secretaria.css
+++ b/Pacote_Download/Projeto_Seminário/Cadastro_secretaria/cad_secretaria.css
@@ -32,15 +32,20 @@
  }
 
 .box {
+    width: 50%;
+    position: absolute;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
     background-color: rgb(187, 214, 196);
     padding: 26px;
     border-radius: 22px;
    border: 1px solid saddlebrown;
-   position: relative;
+   /* position: relative;
    margin-top: 110px;
    margin-left: 30px;
    margin-right: 30px;
-   margin-bottom: 30px;
+   margin-bottom: 30px; */
    font-family: "Inter", sans-serif;
    color: rgb(0, 0, 0);
    z-index: 3;
@@ -91,27 +96,6 @@
     font-weight: bold;
 }
 
-.form-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px; /* Espaço entre as colunas */
-    padding: 10px;
-}
-
-.coluna-50l{
-    display: inline-block;
-    /* float: left; */
-    width: 47.5%;
-    flex: 1;
-}
-
-.coluna-50r{
-    display: inline-block;
-    /* float: right; */
-    width: 47.5%;
-    margin-left: 2.05%; 
-    flex: 1;
-}
 
 
 .background_inf{
