--- a/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
+++ b/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
@@ -1,7 +1,8 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(to right, rgb(20,147,220), rgb(17,54,71));
+ 
+    background-color: #8a9dce;
     text-align: center;
     color: white;
     width: 100%;
