--- a/Pacote_Download/Projeto_Seminário/page_professor/style.css
+++ b/Pacote_Download/Projeto_Seminário/page_professor/style.css
@@ -3,6 +3,39 @@
 body{
   margin: 0;
   padding: 0;
+  font-family: Arial, sans-serif;
+  margin: 20px;
+}
+
+.accordion {
+  background-color: white;
+  border: 1px solid #ccc;
+  margin: 10px 0;
+}
+.accordion-header {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+  background-color: rgb(2, 31, 37);
+  color: white;
+}
+.accordion-content {
+  display: none;
+  padding: 10px;
+  border-top: 1px solid #ccc;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+th, td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: center;
+}
+button {
+  margin: 5px;
 }
 
 .topo {
@@ -63,56 +96,39 @@ body{
  border-bottom: 2px solid rgb(206, 184, 85);
 }
 
-.menu {
-    position: fixed;
-    top: 50px;
-    left: 0;
-    width: 20%;
-    height: calc(100% - 50px);
-    background-color: #d6dade; /* Cor de fundo opcional */
-    z-index: 1000; /* Certifique-se de que a div fique acima de outros elementos */
-    border-right: 3px groove rgb(226, 217, 217);
-    text-align: center;
-    /* margin-top: 50PX; */
-    margin-top: 1px;
-    float: left;
-
-  }
-
-
-  .menu a{
-    /* border: 3px solid black;
-    border-radius: 10px; */
-    /* padding: 5px; */
-    text-align: center;
-    /* margin-top: 50px;
-    padding: 20px; */
-    text-decoration: none;
-    color:rgb(3, 3, 64);
-    font-size: 17px ;
-    font-family: "Afacad Flux", sans-serif;
-    /* font-weight: bold; */
-    font-weight: 600;
-  }
-
-.menu a:hover {
-  color: green;
-  cursor: pointer;
-  
-}
-
-
 .principal {
+  top: 0;
+  left: 0;
   position: fixed;
-  background: rgb(253, 253, 255);
+  background: rgb(233, 232, 212);
   top: 50px;
-  margin-left: 20%;
+  
   float: left;
   width: 100%;
   height: 100%;
- 
+
 }
 
+.alunos_notas{
+  margin-top: 30px;
+  
+  width: 95%;
+  height: 90%;
+  margin-left: 2.5%;
+  background: rgb(235, 234, 229);
+  backdrop-filter: blur(20px); /* deixa embaçado*/
+     box-shadow: 0 0 30px rgba(0, 0, 0, .5); 
+     padding: 15px;
+
+}
+
+.selecao{
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
 
 /* Icones do google google */
 
@@ -122,4 +138,44 @@ body{
   'wght' 200,
   'GRAD' 0,
   'opsz' 20
+}
+
+.atualizar_notas{
+background-color: blue;
+color: white;
+padding: 8px;
+border: 1px solid black;
+cursor: pointer;
+}
+
+.atualizar_notas:hover{
+  background-color: white;
+  color: blue;
+  border: 1px solid blue;
+}
+.dados{
+  margin: 5px;
+  
+}
+
+.table{
+  color: white;
+ 
+  padding: 30px;
+  border-radius: 15px 15px 0 0 ;
+  width: 100%;
+  text-align: center;
+  border: 3px groove;
+}
+
+thead{
+      background-color: #f2f2f2; 
+      color: #333; 
+      text-align: center;
+      width: 100%;
+}
+
+td,th {
+  padding: 12px;
+  border: 1px solid #ddd; /* Adiciona borda às células */
 }
