--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/edit_secretaria.css
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/edit_secretaria.css
@@ -1,7 +1,7 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(to right, rgb(20,147,220), rgb(17,54,71));
+    background-color: rgb(4, 35, 51);
     text-align: center;
     color: white;
     width: 100%;
