--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
@@ -32,7 +32,7 @@
  }
 
  
-.box {
+/* .box {
     background-color: rgb(187, 214, 196);
     padding: 26px;
     border-radius: 22px;
@@ -42,6 +42,26 @@
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 30px;
+   font-family: "Inter", sans-serif;
+   color: rgb(0, 0, 0);
+   z-index: 3;
+}  */
+
+.box {
+    width: 80%;
+    position: absolute;
+            top: 48%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+    background-color: rgb(187, 214, 196);
+    padding: 26px;
+    border-radius: 22px;
+   border: 1px solid saddlebrown;
+   /* position: relative;
+   margin-top: 110px;
+   margin-left: 30px;
+   margin-right: 30px;
+   margin-bottom: 30px; */
    font-family: "Inter", sans-serif;
    color: rgb(0, 0, 0);
    z-index: 3;
@@ -56,6 +76,7 @@
 
 .inputBox{
     position: relative;
+   
 }
 
 .inputUser{
@@ -66,7 +87,7 @@
     outline: none;
     color: rgb(0, 0, 0);
     font-size: 15px;
-    width: 95%;
+    width: 98%;
     letter-spacing: 1px;
     border-radius: 5px;
     z-index: 2;
