--- a/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
+++ b/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
@@ -2,7 +2,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
  
-    background-color: #8a9dce;
+    background-color: rgb(85, 165, 205);
     text-align: center;
     color: white;
     width: 100%;
