--- a/Pacote_Download/Projeto_Seminário/page_aluno/style.css
+++ b/Pacote_Download/Projeto_Seminário/page_aluno/style.css
@@ -39,12 +39,14 @@ body{
   display: flex;
   align-items: center;
   gap: 10px; /* Espaçamento entre os itens */
-  text-align: right;
+  text-align: center;
   flex: 1;
-  margin-right: 30px;
+  margin-right: 30%;
   /* margin-left: 1000px; */
   text-decoration: none;
+  justify-content: center;
 }
+
 
 .f_topo a{
   color: rgb(255, 255, 255);
