--- a/Pacote_Download/Projeto_Seminário/page_professor/style.css
+++ b/Pacote_Download/Projeto_Seminário/page_professor/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{
   margin: 0;
   padding: 0;
@@ -24,6 +26,16 @@ body{
   padding: 10px;
   border-top: 1px solid #ccc;
 }
+
+.accordion-arrow {
+  transition: transform 0.3s ease;
+  float: right; /* Posiciona a seta à direita do cabeçalho */
+}
+
+.accordion-header.active .accordion-arrow {
+  transform: rotate(180deg); /* Rotaciona a seta para cima quando ativo */
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -51,7 +63,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-    
+  font-family: 'Times New Roman', Times, serif;
 
 }
 
@@ -71,11 +83,12 @@ button {
   display: flex;
   align-items: center;
   gap: 10px; /* Espaçamento entre os itens */
-  text-align: right;
+  text-align: center;
   flex: 1;
-  margin-right: 30px;
+  margin-right: 30%;
   /* margin-left: 1000px; */
   text-decoration: none;
+  justify-content: center;
 }
 
 .f_topo a{
