--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
@@ -24,6 +24,21 @@
     
  }
 
+ .voltar a{
+    color: white;
+    background: none;
+    margin-left: 15px;
+    text-decoration: none;
+    
+        
+ }
+
+ .voltar a:hover{
+    color: rgb(143, 127, 25);
+   /* text-decoration: underline; */
+        
+ }
+
  legend{
     text-align: center;
     border: 2px;
