--- a/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
+++ b/Pacote_Download/Projeto_Seminário/Page_secretaria/aluno/edit_aluno.css
@@ -42,7 +42,7 @@ thead{
 
 td,th {
     padding: 12px;
-    border: 1px solid #ddd; /* Adiciona borda às células */
+    border: 1px solid #ddd; 
 }
 
 
