--- a/Pacote_Download/Projeto_Seminário/home.css
+++ b/Pacote_Download/Projeto_Seminário/home.css
@@ -8,7 +8,7 @@ body{
 .topo_fundo{
         position: fixed;
         background: url('images/fundo_area_login.jpg') no-repeat;
-        /* background: linear-gradient(to right, rgb(13, 104, 60), rgb(0, 8, 0)); */
+      
         width: 100%;
         height: 40%;
         background-attachment: fixed;
@@ -20,7 +20,7 @@ body{
 
 .topo{
     position: fixed;
-    /* background: linear-gradient(to right, rgb(13, 104, 60), rgb(0, 8, 0)); */
+  
     width: 100%;
     height: 80px;
     background-attachment: fixed;
@@ -31,7 +31,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-sizing: border-box; /* Garante que padding e largura sejam considerados corretamente */
+    box-sizing: border-box; 
     border-bottom: 3px groove rgba(73, 161, 168, 0.2);
     
 }
@@ -71,8 +71,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* alinha verticalmente */
-    height: 100vh; /*altura da div*/
+    align-items: center; 
+    height: 100vh;
    
 
 }
@@ -85,8 +85,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* alinha verticalmente */
-    /* border: 3px solid rgb(179, 16, 16); */
+    align-items: center; 
     border-end-start-radius: 15%;
     border-start-end-radius: 15%;
     text-align: center;
@@ -125,7 +124,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center; /* alinha verticalmente */
-    /* border: 3px solid rgba(23, 140, 175, 0.849); */
+   
     border-end-start-radius: 15%;
     border-start-end-radius: 15%;
     text-align: center;
@@ -160,7 +159,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center; /* alinha verticalmente */
-    /* border: 3px solid rgb(147, 152, 152); */
+    
     border-end-start-radius: 15%;
     border-start-end-radius: 15%;
     text-align: center;
@@ -182,7 +181,7 @@ body{
     margin-top: 30px;
     z-index: 10;  
     padding: 0px;
-    /* max-width: 100%; Garantir que a imagem se ajuste bem */
+
     
 
 }
@@ -194,8 +193,7 @@ body{
     margin-top: 30px;
     z-index: 10;  
 
-    overflow: visible; /* Permite que o pseudo-elemento maior transborde */
-    /* max-width: 100%; Garantir que a imagem se ajuste bem */ 
+    overflow: visible;  
 }
 
 
@@ -205,7 +203,7 @@ body{
     object-fit: cover; 
     /* Ajusta a imagem para preencher o contêiner sem distorção */
     position: relative;
-    z-index: 1; /* Garante que a imagem fique acima do pseudo-elemento */
+    z-index: 1;
 }
 
 .img_secretaria::before {
@@ -217,7 +215,6 @@ body{
     height: 140%;
     background: rgb(179, 16, 16);
     border-radius: 50%;
-    /* padding: 0px; Ajusta o tamanho do pseudo-elemento */
     z-index: -1; /* Coloca o fundo atrás da imagem */
 }
 
@@ -229,8 +226,7 @@ body{
     margin-top: 30px;
     z-index: 10;  
 
-    overflow: visible; /* Permite que o pseudo-elemento maior transborde */
-    /* max-width: 100%; Garantir que a imagem se ajuste bem */ 
+    overflow: visible; 
 }
 
 .img_professor img {
@@ -240,7 +236,7 @@ body{
     /* Ajusta a imagem para preencher o contêiner sem distorção */
     object-position: center top; /* Posiciona a imagem de forma que a parte de cima fique visível */
     position: relative;
-    z-index: 1; /* Garante que a imagem fique acima do pseudo-elemento */
+    z-index: 1; 
 }
 
 .img_professor::before {
@@ -252,7 +248,7 @@ body{
     height: 140%;
     background: rgba(23, 140, 175, 0.849);
     border-radius: 50%;
-    /* padding: 0px; Ajusta o tamanho do pseudo-elemento */
+
     z-index: -1; /* Coloca o fundo atrás da imagem */
 }
 
@@ -264,8 +260,7 @@ body{
     margin-top: 30px;
     z-index: 10;  
 
-    overflow: visible; /* Permite que o pseudo-elemento maior transborde */
-    /* max-width: 100%; Garantir que a imagem se ajuste bem */ 
+    overflow: visible;  
 }
 
 
@@ -276,7 +271,7 @@ body{
     /* Ajusta a imagem para preencher o contêiner sem distorção */
     
     position: relative;
-    z-index: 1; /* Garante que a imagem fique acima do pseudo-elemento */
+    z-index: 1; 
 }
 
 .img_estudante::before {
@@ -288,7 +283,7 @@ body{
     height: 140%;
     background: rgb(147, 152, 152);
     border-radius: 50%;
-    /* padding: 0px; Ajusta o tamanho do pseudo-elemento */
+  
     z-index: -1; /* Coloca o fundo atrás da imagem */
 }
 
@@ -321,26 +316,3 @@ body{
     gap: 10px; /* Espaçamento entre os botões */
 }
 
-
-
-
-
-/* .block_login1 {
-    position: relative;
-    width: 400px;
-    height: 440px;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .5);
-    border-radius: 20px; 
-    backdrop-filter: blur(20px); 
-    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.block_login1   .form-box {
-    width: 100%;
-    padding: 40px;
-} */
