--- a/Pacote_Download/Projeto_Seminário/page_aluno/style.css
+++ b/Pacote_Download/Projeto_Seminário/page_aluno/style.css
@@ -27,7 +27,7 @@ body{
   text-align: left;
   align-items: center;
   padding-left: 10px;
-  line-height: 1px; /* Ajuste conforme necessário */
+  line-height: 1px; 
   color: rgb(255, 255, 255);
   flex: 1;
   height: 35PX;
@@ -42,7 +42,7 @@ body{
   text-align: center;
   flex: 1;
   margin-right: 30%;
-  /* margin-left: 1000px; */
+  
   text-decoration: none;
   justify-content: center;
 }
@@ -50,13 +50,13 @@ body{
 
 .f_topo a{
   color: rgb(255, 255, 255);
-  /* display:flex; */
+
   align-items: center;
   gap: 10px; /* Espaçamento entre os itens */
   text-align: right;
-  /* flex: 1; */
+  
   margin-right: 30px;
-  /* margin-left: 1000px; */
+
   text-decoration: none;
   border-bottom: 2px solid white;
 }
@@ -92,5 +92,5 @@ thead{
 
 td,th {
   padding: 12px;
-  border: 1px solid #ddd; /* Adiciona borda às células */
+  border: 1px solid #ddd; 
 }
