--- a/Pacote_Download/Projeto_Seminário/page_secretaria/professor/edit_professor.css
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/professor/edit_professor.css
@@ -41,7 +41,7 @@ thead{
 
 td,th {
     padding: 12px;
-    border: 1px solid #ddd; /* Adiciona borda às células */
+    border: 1px solid #ddd;
 }
 
 
