--- a/Pacote_Download/Projeto_Seminário/area_login.css
+++ b/Pacote_Download/Projeto_Seminário/area_login.css
@@ -8,19 +8,18 @@ body{
 .topo_fundo{
         position: fixed;
         background: url('images/fundo_area_login.jpg') no-repeat;
-      
         width: 100%;
         height: 40%;
         background-attachment: fixed;
         top: 0;
         left: 0;
+        
 }
 
 
 
 .topo{
     position: fixed;
-  
     width: 100%;
     height: 80px;
     background-attachment: fixed;
@@ -33,7 +32,7 @@ body{
     align-items: center;
     box-sizing: border-box; 
     border-bottom: 3px groove rgba(73, 161, 168, 0.2);
-    
+    z-index: 20;
 }
 
 .logo {
@@ -59,6 +58,7 @@ body{
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
+    padding: 10px;
     
 }
 
