--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/editar_secretaria.css
@@ -102,8 +102,8 @@
 .inputUser:focus ~ .labelInput,
 .inputUser:valid ~ .labelInput {
     top: -20px;
-    font-size: 13px;
-    color: #895F5E;
+    
+    color: black;
     font-weight: bold;
 }
 
